2014-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/eldoc.el (eldoc-documentation-function): Change default.
	(eldoc-mode, eldoc-schedule-timer): Adjust to new default.

2014-12-10  Artur Malabarba  <bruce.connor.am@gmail.com>

	* let-alist.el: Add new package and macro.

2014-12-10  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc-dispatcher.el, vc/vc-hooks.el, vc/vc-rcs.el,
	vc/vc-sccs.el, vc/vc.el: Righteous featurectomy of
	vc-keep-workfiles, it's a shoot-self-in-foot archaism.
	Workfiles are always kept.

2014-12-10  Rasmus Pank Roulund  <emacs@pank.eu>

	* net/ange-ftp.el (ange-ftp-switches-ok): Disallow flags causing
	trouble with ls over ftp.  These flags result in ls returning no
	output, causing Tramp-breakage.  (bug#19192)

2014-12-10  Andreas Schwab  <schwab@suse.de>

	* files.el (file-tree-walk): Use file-name-as-directory unconditionally.

2014-12-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* files.el (directory-files-recursively):
	Use `file-name-all-completions' instead of `directory-files' for
	greater speed.

	* net/shr.el (shr-tag-object): Don't bug out on text elements in
	<object>.

2014-12-09  Bozhidar Batsov  <bozhidar@batsov.com>

	* progmodes/ruby-mode.el (auto-mode-alist): Add .rabl, Berksfile
	and Puppetfile.
	(ruby-toggle-string-quotes): New command that allows you to quickly
	toggle between single-quoted and double-quoted string literals.

2014-12-09  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc/vc-src.el (vc-src-do-comand): Prepend -- to file argument
	list, avoids problems witth names containing hyphens.

2014-12-09  Wilson Snyder  <wsnyder@wsnyder.org>

	Sync with upstream verilog-mode revision aa4b777.
	* progmodes/verilog-mode.el (verilog-mode-version): Update.
	(verilog-auto-end-comment-lines-re, verilog-end-block-ordered-re)
	(verilog-set-auto-endcomments): Automatically comment property/
	endproperty blocks to match other similar blocks like sequence/