@@ -1,3 +1,8 @@
+2014-12-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* vc/vc-hg.el (vc-hg-state): Make FILE absolute.  Handle the case
+	that there is empty output.
+
 2014-12-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/eldoc.el (eldoc-documentation-function): Change default.
